compilador.output
Terminais sem uso na gramática

   LABEL
   ABRE_CHAVES
   FECHA_CHAVES
   ABRE_COLCHETES
   FECHA_COLCHETES
   ARRAY
   OF
   PROCEDURE
   FUNCTION
   GOTO
   IF
   THEN
   ELSE
   WHILE
   DO


Regras inúteis no analisador por causa de conflitos

   35 expressao: expressao_simples relacao expressao_simples

   53 termo: termo operacao fator

   57 fator: expressao
   58      | NOT fator

   59 chama_func: IDENT


Estado 50 conflitos: 2 de deslocamento/redução
Estado 51 conflitos: 15 de redução/redução
Estado 55 conflitos: 2 de deslocamento/redução
Estado 56 conflitos: 1 de deslocamento/redução
Estado 57 conflitos: 15 de redução/redução
Estado 58 conflitos: 12 de deslocamento/redução
Estado 59 conflitos: 2 de deslocamento/redução
Estado 60 conflitos: 6 de deslocamento/redução
Estado 63 conflitos: 15 de redução/redução
Estado 64 conflitos: 15 de redução/redução
Estado 65 conflitos: 2 de deslocamento/redução
Estado 76 conflitos: 2 de deslocamento/redução
Estado 77 conflitos: 2 de deslocamento/redução
Estado 79 conflitos: 6 de deslocamento/redução, 15 de redução/redução
Estado 80 conflitos: 2 de deslocamento/redução
Estado 81 conflitos: 15 de redução/redução
Estado 82 conflitos: 12 de deslocamento/redução, 15 de redução/redução
Estado 83 conflitos: 6 de deslocamento/redução, 15 de redução/redução
Estado 84 conflitos: 15 de redução/redução


Gramática

    0 $accept: programa $end

    1 $@1: %empty

    2 programa: $@1 PROGRAM IDENT ABRE_PARENTESES lista_idents FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO

    3 $@2: %empty

    4 bloco: parte_declara_vars $@2 comando_composto

    5 $@3: %empty

    6 parte_declara_vars: $@3 VAR declara_vars
    7                   | declara_vars
    8                   | %empty

    9 declara_vars: declara_vars declara_var
   10             | declara_var

   11 $@4: %empty

   12 $@5: %empty

   13 declara_var: $@4 lista_id_var DOIS_PONTOS tipo $@5 PONTO_E_VIRGULA

   14 tipo: INTEGER
   15     | BOOLEAN

   16 lista_id_var: lista_id_var VIRGULA IDENT
   17             | IDENT

   18 lista_idents: lista_idents VIRGULA IDENT
   19             | IDENT

   20 comando_composto: T_BEGIN comandos T_END

   21 comandos: %empty
   22         | comando PONTO_E_VIRGULA comandos
   23         | comando

   24 comando: NUMERO DOIS_PONTOS comando_sem_rotulo
   25        | comando_sem_rotulo

   26 $@6: %empty

   27 comando_sem_rotulo: IDENT $@6 identificador

   28 identificador: comando_atribuicao

   29 $@7: %empty

   30 comando_atribuicao: ATRIBUICAO $@7 expressao

   31 lista_expressoes: lista_expressoes VIRGULA expressao
   32                 | expressao
   33                 | %empty

   34 expressao: expressao_simples
   35          | expressao_simples relacao expressao_simples

   36 relacao: IGUAL
   37        | DIFERENTE
   38        | MENOR
   39        | MAIOR
   40        | MENOR_IGUAL
   41        | MAIOR_IGUAL

   42 expressao_simples: expressao_simples operacao termo
   43                  | sinal termo
   44                  | termo

   45 operacao: sinal
   46         | DIV
   47         | MULTIPLICACAO
   48         | AND
   49         | OR

   50 sinal: SOMA
   51      | SUBTRACAO

   52 termo: fator
   53      | termo operacao fator

   54 fator: IDENT
   55      | NUMERO
   56      | chama_func
   57      | expressao
   58      | NOT fator

   59 chama_func: IDENT
   60           | lista_expressoes


Terminais, com as regras onde eles aparecem

$end (0) 0
error (256)
PROGRAM (258) 2
ABRE_PARENTESES (259) 2
FECHA_PARENTESES (260) 2
VIRGULA (261) 16 18 31
PONTO_E_VIRGULA (262) 2 13 22
DOIS_PONTOS (263) 13 24
PONTO (264) 2
T_BEGIN (265) 20
T_END (266) 20
VAR (267) 6
IDENT (268) 2 16 17 18 19 27 54 59
NUMERO (269) 24 55
ATRIBUICAO (270) 30
LABEL (271)
INTEGER (272) 14
BOOLEAN (273) 15
ABRE_CHAVES (274)
FECHA_CHAVES (275)
ABRE_COLCHETES (276)
FECHA_COLCHETES (277)
ARRAY (278)
OF (279)
PROCEDURE (280)
FUNCTION (281)
GOTO (282)
IF (283)
THEN (284)
ELSE (285)
WHILE (286)
DO (287)
OR (288) 49
AND (289) 48
DIV (290) 46
SOMA (291) 50
SUBTRACAO (292) 51
MULTIPLICACAO (293) 47
IGUAL (294) 36
DIFERENTE (295) 37
MENOR (296) 38
MAIOR (297) 39
MENOR_IGUAL (298) 40
MAIOR_IGUAL (299) 41
NOT (300) 58


Não terminais com as regras onde eles aparecem

$accept (46)
    à esquerda: 0
programa (47)
    à esquerda: 2, à direita: 0
$@1 (48)
    à esquerda: 1, à direita: 2
bloco (49)
    à esquerda: 4, à direita: 2
$@2 (50)
    à esquerda: 3, à direita: 4
parte_declara_vars (51)
    à esquerda: 6 7 8, à direita: 4
$@3 (52)
    à esquerda: 5, à direita: 6
declara_vars (53)
    à esquerda: 9 10, à direita: 6 7 9
declara_var (54)
    à esquerda: 13, à direita: 9 10
$@4 (55)
    à esquerda: 11, à direita: 13
$@5 (56)
    à esquerda: 12, à direita: 13
tipo (57)
    à esquerda: 14 15, à direita: 13
lista_id_var (58)
    à esquerda: 16 17, à direita: 13 16
lista_idents (59)
    à esquerda: 18 19, à direita: 2 18
comando_composto (60)
    à esquerda: 20, à direita: 4
comandos (61)
    à esquerda: 21 22 23, à direita: 20 22
comando (62)
    à esquerda: 24 25, à direita: 22 23
comando_sem_rotulo (63)
    à esquerda: 27, à direita: 24 25
$@6 (64)
    à esquerda: 26, à direita: 27
identificador (65)
    à esquerda: 28, à direita: 27
comando_atribuicao (66)
    à esquerda: 30, à direita: 28
$@7 (67)
    à esquerda: 29, à direita: 30
lista_expressoes (68)
    à esquerda: 31 32 33, à direita: 31 60
expressao (69)
    à esquerda: 34 35, à direita: 30 31 32 57
relacao (70)
    à esquerda: 36 37 38 39 40 41, à direita: 35
expressao_simples (71)
    à esquerda: 42 43 44, à direita: 34 35 42
operacao (72)
    à esquerda: 45 46 47 48 49, à direita: 42 53
sinal (73)
    à esquerda: 50 51, à direita: 43 45
termo (74)
    à esquerda: 52 53, à direita: 42 43 44 53
fator (75)
    à esquerda: 54 55 56 57 58, à direita: 52 53 58
chama_func (76)
    à esquerda: 59 60, à direita: 56


Estado 0

    0 $accept: . programa $end

    $padrão  reduzir usando a regra 1 ($@1)

    programa  ir ao estado 1
    $@1       ir ao estado 2


Estado 1

    0 $accept: programa . $end

    $end  deslocar, e ir ao estado 3


Estado 2

    2 programa: $@1 . PROGRAM IDENT ABRE_PARENTESES lista_idents FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO

    PROGRAM  deslocar, e ir ao estado 4


Estado 3

    0 $accept: programa $end .

    $padrão  aceitar


Estado 4

    2 programa: $@1 PROGRAM . IDENT ABRE_PARENTESES lista_idents FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO

    IDENT  deslocar, e ir ao estado 5


Estado 5

    2 programa: $@1 PROGRAM IDENT . ABRE_PARENTESES lista_idents FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO

    ABRE_PARENTESES  deslocar, e ir ao estado 6


Estado 6

    2 programa: $@1 PROGRAM IDENT ABRE_PARENTESES . lista_idents FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO

    IDENT  deslocar, e ir ao estado 7

    lista_idents  ir ao estado 8


Estado 7

   19 lista_idents: IDENT .

    $padrão  reduzir usando a regra 19 (lista_idents)


Estado 8

    2 programa: $@1 PROGRAM IDENT ABRE_PARENTESES lista_idents . FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO
   18 lista_idents: lista_idents . VIRGULA IDENT

    FECHA_PARENTESES  deslocar, e ir ao estado 9
    VIRGULA           deslocar, e ir ao estado 10


Estado 9

    2 programa: $@1 PROGRAM IDENT ABRE_PARENTESES lista_idents FECHA_PARENTESES . PONTO_E_VIRGULA bloco PONTO

    PONTO_E_VIRGULA  deslocar, e ir ao estado 11


Estado 10

   18 lista_idents: lista_idents VIRGULA . IDENT

    IDENT  deslocar, e ir ao estado 12


Estado 11

    2 programa: $@1 PROGRAM IDENT ABRE_PARENTESES lista_idents FECHA_PARENTESES PONTO_E_VIRGULA . bloco PONTO

    T_BEGIN   reduzir usando a regra 8 (parte_declara_vars)
    IDENT     reduzir usando a regra 11 ($@4)
    $padrão  reduzir usando a regra 5 ($@3)

    bloco               ir ao estado 13
    parte_declara_vars  ir ao estado 14
    $@3                 ir ao estado 15
    declara_vars        ir ao estado 16
    declara_var         ir ao estado 17
    $@4                 ir ao estado 18


Estado 12

   18 lista_idents: lista_idents VIRGULA IDENT .

    $padrão  reduzir usando a regra 18 (lista_idents)


Estado 13

    2 programa: $@1 PROGRAM IDENT ABRE_PARENTESES lista_idents FECHA_PARENTESES PONTO_E_VIRGULA bloco . PONTO

    PONTO  deslocar, e ir ao estado 19


Estado 14

    4 bloco: parte_declara_vars . $@2 comando_composto

    $padrão  reduzir usando a regra 3 ($@2)

    $@2  ir ao estado 20


Estado 15

    6 parte_declara_vars: $@3 . VAR declara_vars

    VAR  deslocar, e ir ao estado 21


Estado 16

    7 parte_declara_vars: declara_vars .
    9 declara_vars: declara_vars . declara_var

    IDENT     reduzir usando a regra 11 ($@4)
    $padrão  reduzir usando a regra 7 (parte_declara_vars)

    declara_var  ir ao estado 22
    $@4          ir ao estado 18


Estado 17

   10 declara_vars: declara_var .

    $padrão  reduzir usando a regra 10 (declara_vars)


Estado 18

   13 declara_var: $@4 . lista_id_var DOIS_PONTOS tipo $@5 PONTO_E_VIRGULA

    IDENT  deslocar, e ir ao estado 23

    lista_id_var  ir ao estado 24


Estado 19

    2 programa: $@1 PROGRAM IDENT ABRE_PARENTESES lista_idents FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO .

    $padrão  reduzir usando a regra 2 (programa)


Estado 20

    4 bloco: parte_declara_vars $@2 . comando_composto

    T_BEGIN  deslocar, e ir ao estado 25

    comando_composto  ir ao estado 26


Estado 21

    6 parte_declara_vars: $@3 VAR . declara_vars

    $padrão  reduzir usando a regra 11 ($@4)

    declara_vars  ir ao estado 27
    declara_var   ir ao estado 17
    $@4           ir ao estado 18


Estado 22

    9 declara_vars: declara_vars declara_var .

    $padrão  reduzir usando a regra 9 (declara_vars)


Estado 23

   17 lista_id_var: IDENT .

    $padrão  reduzir usando a regra 17 (lista_id_var)


Estado 24

   13 declara_var: $@4 lista_id_var . DOIS_PONTOS tipo $@5 PONTO_E_VIRGULA
   16 lista_id_var: lista_id_var . VIRGULA IDENT

    VIRGULA      deslocar, e ir ao estado 28
    DOIS_PONTOS  deslocar, e ir ao estado 29


Estado 25

   20 comando_composto: T_BEGIN . comandos T_END

    IDENT   deslocar, e ir ao estado 30
    NUMERO  deslocar, e ir ao estado 31

    $padrão  reduzir usando a regra 21 (comandos)

    comandos            ir ao estado 32
    comando             ir ao estado 33
    comando_sem_rotulo  ir ao estado 34


Estado 26

    4 bloco: parte_declara_vars $@2 comando_composto .

    $padrão  reduzir usando a regra 4 (bloco)


Estado 27

    6 parte_declara_vars: $@3 VAR declara_vars .
    9 declara_vars: declara_vars . declara_var

    IDENT     reduzir usando a regra 11 ($@4)
    $padrão  reduzir usando a regra 6 (parte_declara_vars)

    declara_var  ir ao estado 22
    $@4          ir ao estado 18


Estado 28

   16 lista_id_var: lista_id_var VIRGULA . IDENT

    IDENT  deslocar, e ir ao estado 35


Estado 29

   13 declara_var: $@4 lista_id_var DOIS_PONTOS . tipo $@5 PONTO_E_VIRGULA

    INTEGER  deslocar, e ir ao estado 36
    BOOLEAN  deslocar, e ir ao estado 37

    tipo  ir ao estado 38


Estado 30

   27 comando_sem_rotulo: IDENT . $@6 identificador

    $padrão  reduzir usando a regra 26 ($@6)

    $@6  ir ao estado 39


Estado 31

   24 comando: NUMERO . DOIS_PONTOS comando_sem_rotulo

    DOIS_PONTOS  deslocar, e ir ao estado 40


Estado 32

   20 comando_composto: T_BEGIN comandos . T_END

    T_END  deslocar, e ir ao estado 41


Estado 33

   22 comandos: comando . PONTO_E_VIRGULA comandos
   23         | comando .

    PONTO_E_VIRGULA  deslocar, e ir ao estado 42

    $padrão  reduzir usando a regra 23 (comandos)


Estado 34

   25 comando: comando_sem_rotulo .

    $padrão  reduzir usando a regra 25 (comando)


Estado 35

   16 lista_id_var: lista_id_var VIRGULA IDENT .

    $padrão  reduzir usando a regra 16 (lista_id_var)


Estado 36

   14 tipo: INTEGER .

    $padrão  reduzir usando a regra 14 (tipo)


Estado 37

   15 tipo: BOOLEAN .

    $padrão  reduzir usando a regra 15 (tipo)


Estado 38

   13 declara_var: $@4 lista_id_var DOIS_PONTOS tipo . $@5 PONTO_E_VIRGULA

    $padrão  reduzir usando a regra 12 ($@5)

    $@5  ir ao estado 43


Estado 39

   27 comando_sem_rotulo: IDENT $@6 . identificador

    ATRIBUICAO  deslocar, e ir ao estado 44

    identificador       ir ao estado 45
    comando_atribuicao  ir ao estado 46


Estado 40

   24 comando: NUMERO DOIS_PONTOS . comando_sem_rotulo

    IDENT  deslocar, e ir ao estado 30

    comando_sem_rotulo  ir ao estado 47


Estado 41

   20 comando_composto: T_BEGIN comandos T_END .

    $padrão  reduzir usando a regra 20 (comando_composto)


Estado 42

   22 comandos: comando PONTO_E_VIRGULA . comandos

    IDENT   deslocar, e ir ao estado 30
    NUMERO  deslocar, e ir ao estado 31

    $padrão  reduzir usando a regra 21 (comandos)

    comandos            ir ao estado 48
    comando             ir ao estado 33
    comando_sem_rotulo  ir ao estado 34


Estado 43

   13 declara_var: $@4 lista_id_var DOIS_PONTOS tipo $@5 . PONTO_E_VIRGULA

    PONTO_E_VIRGULA  deslocar, e ir ao estado 49


Estado 44

   30 comando_atribuicao: ATRIBUICAO . $@7 expressao

    $padrão  reduzir usando a regra 29 ($@7)

    $@7  ir ao estado 50


Estado 45

   27 comando_sem_rotulo: IDENT $@6 identificador .

    $padrão  reduzir usando a regra 27 (comando_sem_rotulo)


Estado 46

   28 identificador: comando_atribuicao .

    $padrão  reduzir usando a regra 28 (identificador)


Estado 47

   24 comando: NUMERO DOIS_PONTOS comando_sem_rotulo .

    $padrão  reduzir usando a regra 24 (comando)


Estado 48

   22 comandos: comando PONTO_E_VIRGULA comandos .

    $padrão  reduzir usando a regra 22 (comandos)


Estado 49

   13 declara_var: $@4 lista_id_var DOIS_PONTOS tipo $@5 PONTO_E_VIRGULA .

    $padrão  reduzir usando a regra 13 (declara_var)


Estado 50

   30 comando_atribuicao: ATRIBUICAO $@7 . expressao

    IDENT      deslocar, e ir ao estado 51
    NUMERO     deslocar, e ir ao estado 52
    SOMA       deslocar, e ir ao estado 53
    SUBTRACAO  deslocar, e ir ao estado 54
    NOT        deslocar, e ir ao estado 55

    SOMA       [reduzir usando a regra 33 (lista_expressoes)]
    SUBTRACAO  [reduzir usando a regra 33 (lista_expressoes)]
    $padrão   reduzir usando a regra 33 (lista_expressoes)

    lista_expressoes   ir ao estado 56
    expressao          ir ao estado 57
    expressao_simples  ir ao estado 58
    sinal              ir ao estado 59
    termo              ir ao estado 60
    fator              ir ao estado 61
    chama_func         ir ao estado 62


Estado 51

   54 fator: IDENT .
   59 chama_func: IDENT .

    VIRGULA          reduzir usando a regra 54 (fator)
    VIRGULA          [reduzir usando a regra 59 (chama_func)]
    PONTO_E_VIRGULA  reduzir usando a regra 54 (fator)
    PONTO_E_VIRGULA  [reduzir usando a regra 59 (chama_func)]
    T_END            reduzir usando a regra 54 (fator)
    T_END            [reduzir usando a regra 59 (chama_func)]
    OR               reduzir usando a regra 54 (fator)
    OR               [reduzir usando a regra 59 (chama_func)]
    AND              reduzir usando a regra 54 (fator)
    AND              [reduzir usando a regra 59 (chama_func)]
    DIV              reduzir usando a regra 54 (fator)
    DIV              [reduzir usando a regra 59 (chama_func)]
    SOMA             reduzir usando a regra 54 (fator)
    SOMA             [reduzir usando a regra 59 (chama_func)]
    SUBTRACAO        reduzir usando a regra 54 (fator)
    SUBTRACAO        [reduzir usando a regra 59 (chama_func)]
    MULTIPLICACAO    reduzir usando a regra 54 (fator)
    MULTIPLICACAO    [reduzir usando a regra 59 (chama_func)]
    IGUAL            reduzir usando a regra 54 (fator)
    IGUAL            [reduzir usando a regra 59 (chama_func)]
    DIFERENTE        reduzir usando a regra 54 (fator)
    DIFERENTE        [reduzir usando a regra 59 (chama_func)]
    MENOR            reduzir usando a regra 54 (fator)
    MENOR            [reduzir usando a regra 59 (chama_func)]
    MAIOR            reduzir usando a regra 54 (fator)
    MAIOR            [reduzir usando a regra 59 (chama_func)]
    MENOR_IGUAL      reduzir usando a regra 54 (fator)
    MENOR_IGUAL      [reduzir usando a regra 59 (chama_func)]
    MAIOR_IGUAL      reduzir usando a regra 54 (fator)
    MAIOR_IGUAL      [reduzir usando a regra 59 (chama_func)]
    $padrão         reduzir usando a regra 54 (fator)


Estado 52

   55 fator: NUMERO .

    $padrão  reduzir usando a regra 55 (fator)


Estado 53

   50 sinal: SOMA .

    $padrão  reduzir usando a regra 50 (sinal)


Estado 54

   51 sinal: SUBTRACAO .

    $padrão  reduzir usando a regra 51 (sinal)


Estado 55

   58 fator: NOT . fator

    IDENT      deslocar, e ir ao estado 51
    NUMERO     deslocar, e ir ao estado 52
    SOMA       deslocar, e ir ao estado 53
    SUBTRACAO  deslocar, e ir ao estado 54
    NOT        deslocar, e ir ao estado 55

    SOMA       [reduzir usando a regra 33 (lista_expressoes)]
    SUBTRACAO  [reduzir usando a regra 33 (lista_expressoes)]
    $padrão   reduzir usando a regra 33 (lista_expressoes)

    lista_expressoes   ir ao estado 56
    expressao          ir ao estado 63
    expressao_simples  ir ao estado 58
    sinal              ir ao estado 59
    termo              ir ao estado 60
    fator              ir ao estado 64
    chama_func         ir ao estado 62


Estado 56

   31 lista_expressoes: lista_expressoes . VIRGULA expressao
   60 chama_func: lista_expressoes .

    VIRGULA  deslocar, e ir ao estado 65

    VIRGULA   [reduzir usando a regra 60 (chama_func)]
    $padrão  reduzir usando a regra 60 (chama_func)


Estado 57

   30 comando_atribuicao: ATRIBUICAO $@7 expressao .
   32 lista_expressoes: expressao .
   57 fator: expressao .

    VIRGULA          reduzir usando a regra 32 (lista_expressoes)
    VIRGULA          [reduzir usando a regra 57 (fator)]
    PONTO_E_VIRGULA  reduzir usando a regra 30 (comando_atribuicao)
    PONTO_E_VIRGULA  [reduzir usando a regra 32 (lista_expressoes)]
    PONTO_E_VIRGULA  [reduzir usando a regra 57 (fator)]
    T_END            reduzir usando a regra 30 (comando_atribuicao)
    T_END            [reduzir usando a regra 32 (lista_expressoes)]
    T_END            [reduzir usando a regra 57 (fator)]
    OR               reduzir usando a regra 32 (lista_expressoes)
    OR               [reduzir usando a regra 57 (fator)]
    AND              reduzir usando a regra 32 (lista_expressoes)
    AND              [reduzir usando a regra 57 (fator)]
    DIV              reduzir usando a regra 32 (lista_expressoes)
    DIV              [reduzir usando a regra 57 (fator)]
    SOMA             reduzir usando a regra 32 (lista_expressoes)
    SOMA             [reduzir usando a regra 57 (fator)]
    SUBTRACAO        reduzir usando a regra 32 (lista_expressoes)
    SUBTRACAO        [reduzir usando a regra 57 (fator)]
    MULTIPLICACAO    reduzir usando a regra 32 (lista_expressoes)
    MULTIPLICACAO    [reduzir usando a regra 57 (fator)]
    IGUAL            reduzir usando a regra 32 (lista_expressoes)
    IGUAL            [reduzir usando a regra 57 (fator)]
    DIFERENTE        reduzir usando a regra 32 (lista_expressoes)
    DIFERENTE        [reduzir usando a regra 57 (fator)]
    MENOR            reduzir usando a regra 32 (lista_expressoes)
    MENOR            [reduzir usando a regra 57 (fator)]
    MAIOR            reduzir usando a regra 32 (lista_expressoes)
    MAIOR            [reduzir usando a regra 57 (fator)]
    MENOR_IGUAL      reduzir usando a regra 32 (lista_expressoes)
    MENOR_IGUAL      [reduzir usando a regra 57 (fator)]
    MAIOR_IGUAL      reduzir usando a regra 32 (lista_expressoes)
    MAIOR_IGUAL      [reduzir usando a regra 57 (fator)]
    $padrão         reduzir usando a regra 32 (lista_expressoes)


Estado 58

   34 expressao: expressao_simples .
   35          | expressao_simples . relacao expressao_simples
   42 expressao_simples: expressao_simples . operacao termo

    OR             deslocar, e ir ao estado 66
    AND            deslocar, e ir ao estado 67
    DIV            deslocar, e ir ao estado 68
    SOMA           deslocar, e ir ao estado 53
    SUBTRACAO      deslocar, e ir ao estado 54
    MULTIPLICACAO  deslocar, e ir ao estado 69
    IGUAL          deslocar, e ir ao estado 70
    DIFERENTE      deslocar, e ir ao estado 71
    MENOR          deslocar, e ir ao estado 72
    MAIOR          deslocar, e ir ao estado 73
    MENOR_IGUAL    deslocar, e ir ao estado 74
    MAIOR_IGUAL    deslocar, e ir ao estado 75

    OR             [reduzir usando a regra 34 (expressao)]
    AND            [reduzir usando a regra 34 (expressao)]
    DIV            [reduzir usando a regra 34 (expressao)]
    SOMA           [reduzir usando a regra 34 (expressao)]
    SUBTRACAO      [reduzir usando a regra 34 (expressao)]
    MULTIPLICACAO  [reduzir usando a regra 34 (expressao)]
    IGUAL          [reduzir usando a regra 34 (expressao)]
    DIFERENTE      [reduzir usando a regra 34 (expressao)]
    MENOR          [reduzir usando a regra 34 (expressao)]
    MAIOR          [reduzir usando a regra 34 (expressao)]
    MENOR_IGUAL    [reduzir usando a regra 34 (expressao)]
    MAIOR_IGUAL    [reduzir usando a regra 34 (expressao)]
    $padrão       reduzir usando a regra 34 (expressao)

    relacao   ir ao estado 76
    operacao  ir ao estado 77
    sinal     ir ao estado 78


Estado 59

   43 expressao_simples: sinal . termo

    IDENT      deslocar, e ir ao estado 51
    NUMERO     deslocar, e ir ao estado 52
    SOMA       deslocar, e ir ao estado 53
    SUBTRACAO  deslocar, e ir ao estado 54
    NOT        deslocar, e ir ao estado 55

    SOMA       [reduzir usando a regra 33 (lista_expressoes)]
    SUBTRACAO  [reduzir usando a regra 33 (lista_expressoes)]
    $padrão   reduzir usando a regra 33 (lista_expressoes)

    lista_expressoes   ir ao estado 56
    expressao          ir ao estado 63
    expressao_simples  ir ao estado 58
    sinal              ir ao estado 59
    termo              ir ao estado 79
    fator              ir ao estado 61
    chama_func         ir ao estado 62


Estado 60

   44 expressao_simples: termo .
   53 termo: termo . operacao fator

    OR             deslocar, e ir ao estado 66
    AND            deslocar, e ir ao estado 67
    DIV            deslocar, e ir ao estado 68
    SOMA           deslocar, e ir ao estado 53
    SUBTRACAO      deslocar, e ir ao estado 54
    MULTIPLICACAO  deslocar, e ir ao estado 69

    OR             [reduzir usando a regra 44 (expressao_simples)]
    AND            [reduzir usando a regra 44 (expressao_simples)]
    DIV            [reduzir usando a regra 44 (expressao_simples)]
    SOMA           [reduzir usando a regra 44 (expressao_simples)]
    SUBTRACAO      [reduzir usando a regra 44 (expressao_simples)]
    MULTIPLICACAO  [reduzir usando a regra 44 (expressao_simples)]
    $padrão       reduzir usando a regra 44 (expressao_simples)

    operacao  ir ao estado 80
    sinal     ir ao estado 78


Estado 61

   52 termo: fator .

    $padrão  reduzir usando a regra 52 (termo)


Estado 62

   56 fator: chama_func .

    $padrão  reduzir usando a regra 56 (fator)


Estado 63

   32 lista_expressoes: expressao .
   57 fator: expressao .

    VIRGULA          reduzir usando a regra 32 (lista_expressoes)
    VIRGULA          [reduzir usando a regra 57 (fator)]
    PONTO_E_VIRGULA  reduzir usando a regra 32 (lista_expressoes)
    PONTO_E_VIRGULA  [reduzir usando a regra 57 (fator)]
    T_END            reduzir usando a regra 32 (lista_expressoes)
    T_END            [reduzir usando a regra 57 (fator)]
    OR               reduzir usando a regra 32 (lista_expressoes)
    OR               [reduzir usando a regra 57 (fator)]
    AND              reduzir usando a regra 32 (lista_expressoes)
    AND              [reduzir usando a regra 57 (fator)]
    DIV              reduzir usando a regra 32 (lista_expressoes)
    DIV              [reduzir usando a regra 57 (fator)]
    SOMA             reduzir usando a regra 32 (lista_expressoes)
    SOMA             [reduzir usando a regra 57 (fator)]
    SUBTRACAO        reduzir usando a regra 32 (lista_expressoes)
    SUBTRACAO        [reduzir usando a regra 57 (fator)]
    MULTIPLICACAO    reduzir usando a regra 32 (lista_expressoes)
    MULTIPLICACAO    [reduzir usando a regra 57 (fator)]
    IGUAL            reduzir usando a regra 32 (lista_expressoes)
    IGUAL            [reduzir usando a regra 57 (fator)]
    DIFERENTE        reduzir usando a regra 32 (lista_expressoes)
    DIFERENTE        [reduzir usando a regra 57 (fator)]
    MENOR            reduzir usando a regra 32 (lista_expressoes)
    MENOR            [reduzir usando a regra 57 (fator)]
    MAIOR            reduzir usando a regra 32 (lista_expressoes)
    MAIOR            [reduzir usando a regra 57 (fator)]
    MENOR_IGUAL      reduzir usando a regra 32 (lista_expressoes)
    MENOR_IGUAL      [reduzir usando a regra 57 (fator)]
    MAIOR_IGUAL      reduzir usando a regra 32 (lista_expressoes)
    MAIOR_IGUAL      [reduzir usando a regra 57 (fator)]
    $padrão         reduzir usando a regra 32 (lista_expressoes)


Estado 64

   52 termo: fator .
   58 fator: NOT fator .

    VIRGULA          reduzir usando a regra 52 (termo)
    VIRGULA          [reduzir usando a regra 58 (fator)]
    PONTO_E_VIRGULA  reduzir usando a regra 52 (termo)
    PONTO_E_VIRGULA  [reduzir usando a regra 58 (fator)]
    T_END            reduzir usando a regra 52 (termo)
    T_END            [reduzir usando a regra 58 (fator)]
    OR               reduzir usando a regra 52 (termo)
    OR               [reduzir usando a regra 58 (fator)]
    AND              reduzir usando a regra 52 (termo)
    AND              [reduzir usando a regra 58 (fator)]
    DIV              reduzir usando a regra 52 (termo)
    DIV              [reduzir usando a regra 58 (fator)]
    SOMA             reduzir usando a regra 52 (termo)
    SOMA             [reduzir usando a regra 58 (fator)]
    SUBTRACAO        reduzir usando a regra 52 (termo)
    SUBTRACAO        [reduzir usando a regra 58 (fator)]
    MULTIPLICACAO    reduzir usando a regra 52 (termo)
    MULTIPLICACAO    [reduzir usando a regra 58 (fator)]
    IGUAL            reduzir usando a regra 52 (termo)
    IGUAL            [reduzir usando a regra 58 (fator)]
    DIFERENTE        reduzir usando a regra 52 (termo)
    DIFERENTE        [reduzir usando a regra 58 (fator)]
    MENOR            reduzir usando a regra 52 (termo)
    MENOR            [reduzir usando a regra 58 (fator)]
    MAIOR            reduzir usando a regra 52 (termo)
    MAIOR            [reduzir usando a regra 58 (fator)]
    MENOR_IGUAL      reduzir usando a regra 52 (termo)
    MENOR_IGUAL      [reduzir usando a regra 58 (fator)]
    MAIOR_IGUAL      reduzir usando a regra 52 (termo)
    MAIOR_IGUAL      [reduzir usando a regra 58 (fator)]
    $padrão         reduzir usando a regra 52 (termo)


Estado 65

   31 lista_expressoes: lista_expressoes VIRGULA . expressao

    IDENT      deslocar, e ir ao estado 51
    NUMERO     deslocar, e ir ao estado 52
    SOMA       deslocar, e ir ao estado 53
    SUBTRACAO  deslocar, e ir ao estado 54
    NOT        deslocar, e ir ao estado 55

    SOMA       [reduzir usando a regra 33 (lista_expressoes)]
    SUBTRACAO  [reduzir usando a regra 33 (lista_expressoes)]
    $padrão   reduzir usando a regra 33 (lista_expressoes)

    lista_expressoes   ir ao estado 56
    expressao          ir ao estado 81
    expressao_simples  ir ao estado 58
    sinal              ir ao estado 59
    termo              ir ao estado 60
    fator              ir ao estado 61
    chama_func         ir ao estado 62


Estado 66

   49 operacao: OR .

    $padrão  reduzir usando a regra 49 (operacao)


Estado 67

   48 operacao: AND .

    $padrão  reduzir usando a regra 48 (operacao)


Estado 68

   46 operacao: DIV .

    $padrão  reduzir usando a regra 46 (operacao)


Estado 69

   47 operacao: MULTIPLICACAO .

    $padrão  reduzir usando a regra 47 (operacao)


Estado 70

   36 relacao: IGUAL .

    $padrão  reduzir usando a regra 36 (relacao)


Estado 71

   37 relacao: DIFERENTE .

    $padrão  reduzir usando a regra 37 (relacao)


Estado 72

   38 relacao: MENOR .

    $padrão  reduzir usando a regra 38 (relacao)


Estado 73

   39 relacao: MAIOR .

    $padrão  reduzir usando a regra 39 (relacao)


Estado 74

   40 relacao: MENOR_IGUAL .

    $padrão  reduzir usando a regra 40 (relacao)


Estado 75

   41 relacao: MAIOR_IGUAL .

    $padrão  reduzir usando a regra 41 (relacao)


Estado 76

   35 expressao: expressao_simples relacao . expressao_simples

    IDENT      deslocar, e ir ao estado 51
    NUMERO     deslocar, e ir ao estado 52
    SOMA       deslocar, e ir ao estado 53
    SUBTRACAO  deslocar, e ir ao estado 54
    NOT        deslocar, e ir ao estado 55

    SOMA       [reduzir usando a regra 33 (lista_expressoes)]
    SUBTRACAO  [reduzir usando a regra 33 (lista_expressoes)]
    $padrão   reduzir usando a regra 33 (lista_expressoes)

    lista_expressoes   ir ao estado 56
    expressao          ir ao estado 63
    expressao_simples  ir ao estado 82
    sinal              ir ao estado 59
    termo              ir ao estado 60
    fator              ir ao estado 61
    chama_func         ir ao estado 62


Estado 77

   42 expressao_simples: expressao_simples operacao . termo

    IDENT      deslocar, e ir ao estado 51
    NUMERO     deslocar, e ir ao estado 52
    SOMA       deslocar, e ir ao estado 53
    SUBTRACAO  deslocar, e ir ao estado 54
    NOT        deslocar, e ir ao estado 55

    SOMA       [reduzir usando a regra 33 (lista_expressoes)]
    SUBTRACAO  [reduzir usando a regra 33 (lista_expressoes)]
    $padrão   reduzir usando a regra 33 (lista_expressoes)
